traversal.snake.Snake.scala.error
Compilation error:
Snake:8: error: ';' expected but 'else' found.
      else if (estFaceMur() && getDirection()== Direction.OUEST)
      ^